Customized the cover finding

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,6 +27,9 @@ MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
 NewWindowPosition=(X=655,Y=323)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+PlayNetDedicated=True
+PlayNumberOfClients=2
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -46,11 +49,11 @@ CurrentPosGridSize=4
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Level/maps/TestMap
+LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.03-22.41.33
-CoopGame.LastCompileMethod=External
+CoopGame.TimeStamp=2020.05.05-22.25.20
+CoopGame.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -4145,8 +4148,7 @@ EditorKeyboardShortcutSettings.BTEditor.Debugger=True
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers.EnvQueryContext_FindAllPlayers
-OpenAssetsAtExit=/Game/AdvancedAI/EQS_CoverFindign.EQS_CoverFindign
+OpenAssetsAtExit=/Game/AdvancedAI/EQS_CoverFinding.EQS_CoverFinding
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4179,7 +4181,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Level/Materials
+ContentBrowserTab1.SelectedPaths=/Game/AdvancedAI
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -4230,8 +4232,8 @@ Level=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/Coo
 Project=C:/Program Files/Epic Games/UE_4.22/
 
 [MRU]
-MRUItem0=/Game/Level/maps/TestMap
-MRUItem1=/Game/Level/maps/VoidMap
+MRUItem0=/Game/Level/maps/VoidMap
+MRUItem1=/Game/Level/maps/TestMap
 MRUItem2=/Game/Level/maps/Wimbledon
 MRUItem3=/Game/Level/maps/Blockout_P
 MRUItem4=/Game/maps/VoidMap
@@ -4330,15 +4332,15 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 BlendSpace=BlendSpace.BlendSamples.GroupName,
 SkeletalMeshActor=SkeletalMeshActor.Collision.Collision,
 BP_AI_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_AI_C.Collision.Collision,
-BP_AIPlayer_C=BP_AIPlayer_C.Collision.Collision,BP_AIPlayer_C.PostProcess.Lens|Depth of Field,BP_AIPlayer_C.PostProcess.Lens|BloomAdvanced,BP_AIPlayer_C.PostProcess.Lens|Bloom,BP_AIPlayer_C.PostProcess.Lens|ExposureAdvanced,BP_AIPlayer_C.PostProcess.Lens|Exposure,BP_AIPlayer_C.PostProcess.Lens|Chromatic Aberration,BP_AIPlayer_C.PostProcess.Lens|Dirt Mask,BP_AIPlayer_C.PostProcess.Lens|Camera,BP_AIPlayer_C.PostProcess.Lens,BP_AIPlayer_C.PostProcess.Color Grading|WhiteBalance,BP_AIPlayer_C.PostProcess.Color Grading|Global,BP_AIPlayer_C.PostProcess.Color Grading|Shadows,BP_AIPlayer_C.PostProcess.Color Grading|Midtones,BP_AIPlayer_C.PostProcess.Color Grading|Highlights,BP_AIPlayer_C.PostProcess.Color Grading|Misc,BP_AIPlayer_C.PostProcess.Color Grading,BP_AIPlayer_C.PostProcess.Film,BP_AIPlayer_C.PostProcess.Mobile Tonemapper,BP_AIPlayer_C.PostProcess.Rendering Features|Ambient Cubemap,BP_AIPlayer_C.PostProcess.Rendering Features|Ambient OcclusionAdvanced,BP_AIPlayer_C.PostProcess.Rendering Features|Ambient Occlusion,BP_AIPlayer_C.PostProcess.Rendering Features|Ray Tracing Ambient Occlusion,BP_AIPlayer_C.PostProcess.Rendering Features|Ray Tracing Global Illumination,BP_AIPlayer_C.PostProcess.Rendering Features|Motion Blur,BP_AIPlayer_C.PostProcess.Rendering Features|Light Propagation VolumeAdvanced,BP_AIPlayer_C.PostProcess.Rendering Features|Light Propagation Volume,BP_AIPlayer_C.PostProcess.Rendering Features|Screen Space Reflections,BP_AIPlayer_C.PostProcess.Rendering Features|Ray Tracing Reflections,BP_AIPlayer_C.PostProcess.Rendering Features|Ray Tracing Translucency,BP_AIPlayer_C.PostProcess.Rendering Features|PathTracing,BP_AIPlayer_C.PostProcess.Rendering Features,
+BP_AIPlayer_C=BP_AIPlayer_C.Collision.Collision,BP_AIPlayer_C.PostProcess.Lens,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
 Object=
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Pawn="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_34="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
@@ -4380,7 +4382,7 @@ REINST_BP_PlayerPawn_C_32="\"Object.Character.Mesh.Object.Collision.BodyInstance
 PainCausingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" "
 BP_ExplosiveBarrel_C=
@@ -4485,11 +4487,14 @@ BlackboardData="\"Object.Blackboard\" "
 EnvQueryGenerator_Donut="\"Object.Generator.ProjectionData\" "
 EnvQueryTest_Trace="\"Object.Trace.TraceData\" "
 EnvQueryTest=
+REINST_BP_PlayerPawn_C_227="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+REINST_BP_AIPlayer_C_231="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/GameModes/BP_EQSTestingPawn.BP_EQSTestingPawn;
 RecentlyPlaced=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/AdvancedAI/BP_AI.BP_AI;
 RecentlyPlaced=/Game/Blueprints/Animations/BP_CharacterAnimation.BP_CharacterAnimation;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -4505,30 +4510,29 @@ RecentlyPlaced=/Game/Powerups/Pickup/BP_PowerupPickup.BP_PowerupPickup;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem1=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem2=/Game/AdvancedAI/BT_AIPlayer
-MRUItem3=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem4=/Game/AdvancedAI/EQS_CoverFindign
-MRUItem5=/Game/AdvancedAI/BP_AIPlayer
-MRUItem6=/Game/AdvancedAI/BB_AIPlayer
-MRUItem7=/Game/AdvancedAI/BP_AI
-MRUItem8=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem9=/Game/Level/maps/TestMap
-MRUItem10=/Game/Level/maps/VoidMap
-MRUItem11=/Game/Level/maps/Wimbledon
-MRUItem12=/Game/Level/maps/Blockout_P
-MRUItem13=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem14=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem15=/Game/Weapons/SK_Rifle_Skeleton
-MRUItem16=/Game/Weapons/SK_Rifle
-MRUItem17=/Game/AnimStarterPack/Crouch_Walk_Bwd_Rifle_Hip
-MRUItem18=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem19=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem0=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem1=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem2=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem3=/Game/AdvancedAI/EQS_Trash
+MRUItem4=/Game/AdvancedAI/BT_AIPlayer
+MRUItem5=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem6=/Game/Level/maps/VoidMap
+MRUItem7=/Game/Level/maps/TestMap
+MRUItem8=/Game/AdvancedAI/BP_AIPlayer
+MRUItem9=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem10=/Game/AdvancedAI/EQS_CoverFindign
+MRUItem11=/Game/AdvancedAI/BB_AIPlayer
+MRUItem12=/Game/AdvancedAI/BP_AI
+MRUItem13=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem14=/Game/Level/maps/Wimbledon
+MRUItem15=/Game/Level/maps/Blockout_P
+MRUItem16=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem17=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem18=/Game/Weapons/SK_Rifle_Skeleton
+MRUItem19=/Game/Weapons/SK_Rifle
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -4612,6 +4616,7 @@ MRUItem19=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
 /Game/Blueprints/GameModes/EnvQueryContext_BotSpawns.EnvQueryContext_BotSpawns=0
 /Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers.EnvQueryContext_FindAllPlayers=0
 /Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer=0
+/Game/AdvancedAI/EQS_Trash.EQS_Trash=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -4808,6 +4813,7 @@ FbxImportUI.Mesh=True
 BP_AIPlayer_C.Animation=True
 EnvQueryTest_Trace.Filter=True
 EnvQueryTest_Trace.Trace=True
+EnvQueryGenerator_Donut.Option=True
 
 [MaterialInstanceEditor]
 bShowGrid=False
